--- a/.github/workflows/cd-workflows.yml
+++ b/.github/workflows/cd-workflows.yml
@@ -1,13 +1,17 @@
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   docker-push:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Set uo QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -18,5 +22,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: user/app:latest
+          tags: dioangga/rakamin-test:latest
   
