--- a/.github/workflows/cd-workflows.yml
+++ b/.github/workflows/cd-workflows.yml
@@ -1,17 +1,41 @@
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   docker-push:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Set uo QEMU
+#         uses: docker/setup-qemu-action@v1
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v1
+#       - name: Login to Docker Hub
+#         uses: docker/login-action@v1
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+#       - name: Build and push
+#         id: docker_build
+#         uses: docker/build-push-action@v2
+#         with:
+#           push: true
+#           tags: dioangga/rakamin-test:latest
+
+
+
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   docker-push:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set uo QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -22,5 +46,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: dioangga/rakamin-test:latest
-  
+          tags: user/app:latest
